verying LSTM Layer

--- a/RNN-3-Hidden_Layer_combination.ipynb
+++ b/RNN-3-Hidden_Layer_combination.ipynb
@@ -1347,6 +1347,7 @@
    },
    "cell_type": "code",
    "source": [
+    "models = {}\n",
     "for hidden_layers in hidden_layers_list:\n",
     "    for hidden_units in hidden_units_list:\n",
     "        print(f\"Training model with {hidden_layers} hidden layers and {hidden_units} hidden units per layer...\")\n",
@@ -1365,7 +1366,8 @@
     "            'test_acc': history.history['val_accuracy'][-1]\n",
     "        }\n",
     "\n",
-    "        params_history[(hidden_layers, hidden_units)] = model.count_params()"
+    "        params_history[(hidden_layers, hidden_units)] = model.count_params()\n",
+    "        models[(hidden_layers, hidden_units)] = model"
    ],
    "outputs": [
     {
