fix negation append problem

--- a/Test-data-processing.ipynb
+++ b/Test-data-processing.ipynb
@@ -61,12 +61,12 @@
    "metadata": {
     "id": "YeuAheYyhdZw",
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.088471Z",
-     "start_time": "2025-03-23T07:50:31.081308Z"
+     "end_time": "2025-03-23T09:25:34.505319Z",
+     "start_time": "2025-03-23T09:25:34.500012Z"
     }
    },
    "outputs": [],
-   "execution_count": 349
+   "execution_count": 571
   },
   {
    "cell_type": "markdown",
@@ -84,8 +84,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.103545Z",
-     "start_time": "2025-03-23T07:50:31.100085Z"
+     "end_time": "2025-03-23T09:25:34.515618Z",
+     "start_time": "2025-03-23T09:25:34.511802Z"
     }
    },
    "outputs": [
@@ -106,13 +106,13 @@
      ]
     }
    ],
-   "execution_count": 350
+   "execution_count": 572
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.130654Z",
-     "start_time": "2025-03-23T07:50:31.127192Z"
+     "end_time": "2025-03-23T09:25:34.534196Z",
+     "start_time": "2025-03-23T09:25:34.530632Z"
     }
    },
    "cell_type": "code",
@@ -130,233 +130,44 @@
      ]
     }
    ],
-   "execution_count": 351
+   "execution_count": 573
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.206365Z",
-     "start_time": "2025-03-23T07:50:31.195419Z"
+     "end_time": "2025-03-23T09:25:34.592607Z",
+     "start_time": "2025-03-23T09:25:34.588916Z"
     }
    },
    "cell_type": "code",
-   "source": "{'all', 'needn', 'because', 'up', \"she'll\", 'or', \"you've\", \"shan't\", 'over', 'where', 'wasn', 'into', 'out', \"i'll\", 'that', 'yourself', 'by', 'same', 'at', 'before', 'hasn', 'll', 'mustn', 'don', 'when', 'it', 'hadn', 'very', \"they'd\", 'you', 'after', 'the', \"you'd\", 'their', 'those', \"mightn't\", 'which', 'only', 'what', 'i', 'has', 'will', 'can', 'each', 'she', 're', \"that'll\", \"they've\", 'no', 'this', \"hasn't\", \"he'd\", 'down', \"needn't\", 'isn', 'm', 'her', 'between', 'whom', 'such', 'is', 'just', 'hers', \"hadn't\", 'haven', \"i'm\", 'and', 'most', 'own', \"they're\", \"i've\", 'there', 'during', 'through', \"he's\", 'ours', 'doing', 'am', 'mightn', \"it'll\", 'we', 'how', 'itself', 'y', 'our', 'any', 'once', 'few', 'wouldn', 'are', 'd', 'these', 'as', 'ma', 'himself', 'both', \"couldn't\", 'having', 'me', 'than', \"it's\", 'o', \"you'll\", 'be', \"doesn't\", 'not', 'some', \"we're\", \"won't\", 't', 's', 'had', 'against', \"i'd\", 'aren', 'should', 'nor', 'have', 'further', 'with', 'a', 'too', \"aren't\", 'them', 'were', 'ourselves', 'theirs', \"we'll\", 'but', 'off', 'for', 'they', 'doesn', \"wouldn't\", 'themselves', 'was', 'yours', 'yourselves', 'in', 'about', 'then', 'until', 'again', 'shan', 'him', 'of', \"we've\", 'its', \"didn't\", 'myself', \"should've\", \"isn't\", 'while', 'your', 'why', 'so', 'an', \"it'd\", 'didn', 'on', \"you're\", 'above', 'couldn', \"shouldn't\", 'does', \"haven't\", 'if', 'being', 'his', 'from', 'other', 'more', \"weren't\", 'do', 'my', 'under', 'did', 'now', 'herself', \"we'd\", 'who', 'here', 've', 'shouldn', 'below', \"she'd\", 'been', \"mustn't\", \"they'll\", \"wasn't\", 'weren', 'won', 'he', \"he'll\", \"don't\", 'to', 'ain', \"she's\"}",
+   "source": [
+    "tweet = \"doesn't\"\n",
+    "tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
+    "tweet = re.sub(r\"(?<!n)t'\\b|'\", ' ', tweet)\n",
+    "print(tweet)\n",
+    "tweet = \"i'll\"\n",
+    "tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
+    "tweet = re.sub(r\"(?<!n)t'\\b|'\", ' ', tweet)\n",
+    "print(tweet)"
+   ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'a',\n",
-       " 'about',\n",
-       " 'above',\n",
-       " 'after',\n",
-       " 'again',\n",
-       " 'against',\n",
-       " 'ain',\n",
-       " 'all',\n",
-       " 'am',\n",
-       " 'an',\n",
-       " 'and',\n",
-       " 'any',\n",
-       " 'are',\n",
-       " 'aren',\n",
-       " \"aren't\",\n",
-       " 'as',\n",
-       " 'at',\n",
-       " 'be',\n",
-       " 'because',\n",
-       " 'been',\n",
-       " 'before',\n",
-       " 'being',\n",
-       " 'below',\n",
-       " 'between',\n",
-       " 'both',\n",
-       " 'but',\n",
-       " 'by',\n",
-       " 'can',\n",
-       " 'couldn',\n",
-       " \"couldn't\",\n",
-       " 'd',\n",
-       " 'did',\n",
-       " 'didn',\n",
-       " \"didn't\",\n",
-       " 'do',\n",
-       " 'does',\n",
-       " 'doesn',\n",
-       " \"doesn't\",\n",
-       " 'doing',\n",
-       " 'don',\n",
-       " \"don't\",\n",
-       " 'down',\n",
-       " 'during',\n",
-       " 'each',\n",
-       " 'few',\n",
-       " 'for',\n",
-       " 'from',\n",
-       " 'further',\n",
-       " 'had',\n",
-       " 'hadn',\n",
-       " \"hadn't\",\n",
-       " 'has',\n",
-       " 'hasn',\n",
-       " \"hasn't\",\n",
-       " 'have',\n",
-       " 'haven',\n",
-       " \"haven't\",\n",
-       " 'having',\n",
-       " 'he',\n",
-       " \"he'd\",\n",
-       " \"he'll\",\n",
-       " \"he's\",\n",
-       " 'her',\n",
-       " 'here',\n",
-       " 'hers',\n",
-       " 'herself',\n",
-       " 'him',\n",
-       " 'himself',\n",
-       " 'his',\n",
-       " 'how',\n",
-       " 'i',\n",
-       " \"i'd\",\n",
-       " \"i'll\",\n",
-       " \"i'm\",\n",
-       " \"i've\",\n",
-       " 'if',\n",
-       " 'in',\n",
-       " 'into',\n",
-       " 'is',\n",
-       " 'isn',\n",
-       " \"isn't\",\n",
-       " 'it',\n",
-       " \"it'd\",\n",
-       " \"it'll\",\n",
-       " \"it's\",\n",
-       " 'its',\n",
-       " 'itself',\n",
-       " 'just',\n",
-       " 'll',\n",
-       " 'm',\n",
-       " 'ma',\n",
-       " 'me',\n",
-       " 'mightn',\n",
-       " \"mightn't\",\n",
-       " 'more',\n",
-       " 'most',\n",
-       " 'mustn',\n",
-       " \"mustn't\",\n",
-       " 'my',\n",
-       " 'myself',\n",
-       " 'needn',\n",
-       " \"needn't\",\n",
-       " 'no',\n",
-       " 'nor',\n",
-       " 'not',\n",
-       " 'now',\n",
-       " 'o',\n",
-       " 'of',\n",
-       " 'off',\n",
-       " 'on',\n",
-       " 'once',\n",
-       " 'only',\n",
-       " 'or',\n",
-       " 'other',\n",
-       " 'our',\n",
-       " 'ours',\n",
-       " 'ourselves',\n",
-       " 'out',\n",
-       " 'over',\n",
-       " 'own',\n",
-       " 're',\n",
-       " 's',\n",
-       " 'same',\n",
-       " 'shan',\n",
-       " \"shan't\",\n",
-       " 'she',\n",
-       " \"she'd\",\n",
-       " \"she'll\",\n",
-       " \"she's\",\n",
-       " 'should',\n",
-       " \"should've\",\n",
-       " 'shouldn',\n",
-       " \"shouldn't\",\n",
-       " 'so',\n",
-       " 'some',\n",
-       " 'such',\n",
-       " 't',\n",
-       " 'than',\n",
-       " 'that',\n",
-       " \"that'll\",\n",
-       " 'the',\n",
-       " 'their',\n",
-       " 'theirs',\n",
-       " 'them',\n",
-       " 'themselves',\n",
-       " 'then',\n",
-       " 'there',\n",
-       " 'these',\n",
-       " 'they',\n",
-       " \"they'd\",\n",
-       " \"they'll\",\n",
-       " \"they're\",\n",
-       " \"they've\",\n",
-       " 'this',\n",
-       " 'those',\n",
-       " 'through',\n",
-       " 'to',\n",
-       " 'too',\n",
-       " 'under',\n",
-       " 'until',\n",
-       " 'up',\n",
-       " 've',\n",
-       " 'very',\n",
-       " 'was',\n",
-       " 'wasn',\n",
-       " \"wasn't\",\n",
-       " 'we',\n",
-       " \"we'd\",\n",
-       " \"we'll\",\n",
-       " \"we're\",\n",
-       " \"we've\",\n",
-       " 'were',\n",
-       " 'weren',\n",
-       " \"weren't\",\n",
-       " 'what',\n",
-       " 'when',\n",
-       " 'where',\n",
-       " 'which',\n",
-       " 'while',\n",
-       " 'who',\n",
-       " 'whom',\n",
-       " 'why',\n",
-       " 'will',\n",
-       " 'with',\n",
-       " 'won',\n",
-       " \"won't\",\n",
-       " 'wouldn',\n",
-       " \"wouldn't\",\n",
-       " 'y',\n",
-       " 'you',\n",
-       " \"you'd\",\n",
-       " \"you'll\",\n",
-       " \"you're\",\n",
-       " \"you've\",\n",
-       " 'your',\n",
-       " 'yours',\n",
-       " 'yourself',\n",
-       " 'yourselves'}"
-      ]
-     },
-     "execution_count": 352,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doesn t\n",
+      "i ll\n"
+     ]
     }
    ],
-   "execution_count": 352
+   "execution_count": 574
   },
   {
    "cell_type": "code",
    "source": [
     "urlPattern = r\"((http://)[^ ]*|(https://)[^ ]*|( www\\.)[^ ]*)\"\n",
     "userPattern = '@[^\\s]+'\n",
+    "# 去除标点符号，保留'\n",
     "punctuationPattern = r\"[^\\w\\s']|(?<!\\w)n\\'t\"\n",
     "def process_tweets_not_del_stopw(tweet):\n",
     "  # Lower Casing\n",
@@ -382,7 +193,7 @@
     "        finalwords.append(word)\n",
     "    return ' '.join(finalwords)\n",
     "\n",
-    "def process_tweets_negation_append_del_stopw(tweet):\n",
+    "def process_tweets_negation_append_fix(tweet):\n",
     "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
@@ -390,9 +201,23 @@
     "    tweet = re.sub(urlPattern,'',tweet)\n",
     "    # Removing all @username.\n",
     "    tweet = re.sub(userPattern,'', tweet)\n",
-    "    #Remove punctuations\n",
-    "    # tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
-    "    tweet = re.sub(punctuationPattern,'',tweet)\n",
+    "    # 移除非字母数字、空格和'的字符\n",
+    "    tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
+    "    # --- 特殊否定缩写处理 ---\n",
+    "    # 1. 明确处理 can't → cannot\n",
+    "    tweet = re.sub(r\"\\bcan't\\b\", \"cannot\", tweet)\n",
+    "    # 2. 处理 won't → will not\n",
+    "    tweet = re.sub(r\"\\bwon't\\b\", \"will not\", tweet)\n",
+    "    # 3. 处理 shan't → shall not\n",
+    "    tweet = re.sub(r\"\\bshan't\\b\", \"shall not\", tweet)\n",
+    "    # 4. 处理 ain't → is not\n",
+    "    tweet = re.sub(r\"\\bain't\\b\", \"is not\", tweet)\n",
+    "    # --- 通用n't处理 ---\n",
+    "    # 将剩余n't替换为 not（如didn't → did not）\n",
+    "    tweet = re.sub(r\"n't\\b\", \" not\", tweet)\n",
+    "    # --- 处理其他撇号为空格（如I'll → I ll）---\n",
+    "    tweet = re.sub(r\"'\", ' ', tweet)\n",
+    "    print(f\"tweet: {tweet}\")\n",
     "    #tokenizing words\n",
     "    tokens = word_tokenize(tweet)\n",
     "    # Remove punctuations but remain ‘n't’\n",
@@ -401,22 +226,20 @@
     "    #reducing a word to its word stem\n",
     "    wordLemm = WordNetLemmatizer()\n",
     "    finalwords=[]\n",
-    "    negation_words = {\"not\", \"no\", \"never\", \"n't\"}\n",
-    "    prev_neg = False\n",
     "\n",
-    "    for w in final_tokens:\n",
-    "      if len(w)>1:\n",
-    "        word = wordLemm.lemmatize(w)\n",
-    "        #finalwords.append(word)\n",
-    "        if word in negation_words:\n",
-    "          prev_neg = True\n",
-    "        elif prev_neg:\n",
-    "          finalwords.append(\"not_\" + word)\n",
-    "          prev_neg = False\n",
-    "        else:\n",
-    "          finalwords.append(word)\n",
-    "    return ' '.join(finalwords)\n",
+    "    for w in tokens:\n",
+    "        if len(w) > 1:\n",
+    "            # 动词词性还原（解决 does→doe 问题）\n",
+    "            word = wordLemm.lemmatize(w, pos='v')\n",
+    "            # 名词词性还原（根据任务需求）\n",
+    "            word = wordLemm.lemmatize(word, pos='n')\n",
+    "            finalwords.append(word)\n",
+    "    return finalwords\n",
     "\n",
+    "# 数据处理方法有点问题，tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
+    "# 去除了标点符号，导致带有'n't'的否定词无法被识别为negative word，\n",
+    "# 如何修复既能识别到带有'n't'的否定词，又能去除其它标点符号\n",
+    "# 还需要注意类似I'll要改为I ll\n",
     "def process_tweets_negation_append(tweet):\n",
     "  # Lower Casing\n",
     "    tweet = tweet.lower()\n",
@@ -426,13 +249,14 @@
     "    # Removing all @username.\n",
     "    tweet = re.sub(userPattern,'', tweet)\n",
     "    #Remove punctuations\n",
-    "    # tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
-    "    tweet = re.sub(punctuationPattern,'',tweet)\n",
+    "    tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
+    "    print(f\"tweet: {tweet}\")\n",
     "    #tokenizing words\n",
     "    tokens = word_tokenize(tweet)\n",
-    "    # Remove punctuations but remain ‘n't’\n",
-    "    final_tokens = tokens\n",
     "    print(f\"tokens: {tokens}\")\n",
+    "    #Removing Stop Words\n",
+    "    #final_tokens = [w for w in tokens if w not in stopword]\n",
+    "    final_tokens = tokens\n",
     "    #reducing a word to its word stem\n",
     "    wordLemm = WordNetLemmatizer()\n",
     "    finalwords=[]\n",
@@ -452,6 +276,8 @@
     "          finalwords.append(word)\n",
     "    return ' '.join(finalwords)\n",
     "\n",
+    "# punctuations处理会让\"didn't\" 变成 \"didnt\"，这不在stopword的否定词（didn,didn't），可以留下\n",
+    "# punctuations处理会让\"i'll\" 变成 \"ill\" 和其它单词混淆\n",
     "def process_tweets_remain_negation(tweet):\n",
     "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
@@ -510,12 +336,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.259238Z",
-     "start_time": "2025-03-23T07:50:31.247332Z"
+     "end_time": "2025-03-23T09:25:34.648435Z",
+     "start_time": "2025-03-23T09:25:34.635574Z"
     }
    },
    "outputs": [],
-   "execution_count": 353
+   "execution_count": 575
   },
   {
    "cell_type": "code",
@@ -535,12 +361,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.292394Z",
-     "start_time": "2025-03-23T07:50:31.289273Z"
+     "end_time": "2025-03-23T09:25:34.676647Z",
+     "start_time": "2025-03-23T09:25:34.673348Z"
     }
    },
    "outputs": [],
-   "execution_count": 354
+   "execution_count": 576
   },
   {
    "cell_type": "code",
@@ -548,20 +374,20 @@
     "# Test\n",
     "max_words = 100\n",
     "test_tweets = [\n",
-    "    \"Aww... @Wowena just got home from church??? He doesn't go today\",\n",
-    "    \"You aren't happy with the service at all\",\n",
+    "    \"Aww... @Wowena just won't got home from church??? He doesn't go today\",\n",
+    "    \"You aren't happy with the tables at all\",\n",
     "    \"i'll never come back! website at https://www.example.com\",\n",
-    "    \"Not happy with the service at all.\"\n",
+    "    \"can't happy with the service at all.\"\n",
     "]\n",
     "\n",
-    "processed_test_text = [process_tweets_negation_append_del_stopw(x) for x in test_tweets]\n",
+    "processed_test_text = [process_tweets_negation_append_fix(x) for x in test_tweets]\n",
     "print(\"预处理后的数据:\", processed_test_text)\n",
     "tokenizer(max_words, processed_test_text)"
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T07:50:31.328524Z",
-     "start_time": "2025-03-23T07:50:31.323747Z"
+     "end_time": "2025-03-23T09:25:34.705372Z",
+     "start_time": "2025-03-23T09:25:34.701108Z"
     }
    },
    "outputs": [
@@ -569,22 +395,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: ['aww', 'just', 'got', 'home', 'from', 'church', 'he', 'does', \"n't\", 'go', 'today']\n",
-      "tokens: ['you', 'are', \"n't\", 'happy', 'with', 'the', 'service', 'at', 'all']\n",
-      "tokens: ['i', \"'ll\", 'never', 'come', 'back', 'website', 'at']\n",
-      "tokens: ['not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
-      "预处理后的数据: ['aww just got home from church he doe not_go today', 'you are not_happy with the service at all', \"'ll not_come back website at\", 'not_happy with the service at all']\n",
-      "单词表: {'not': 1, 'at': 2, 'happy': 3, 'with': 4, 'the': 5, 'service': 6, 'all': 7, 'aww': 8, 'just': 9, 'got': 10, 'home': 11, 'from': 12, 'church': 13, 'he': 14, 'doe': 15, 'go': 16, 'today': 17, 'you': 18, 'are': 19, \"'ll\": 20, 'come': 21, 'back': 22, 'website': 23}\n",
-      "文本的单词索引序列: [[8, 9, 10, 11, 12, 13, 14, 15, 1, 16, 17], [18, 19, 1, 3, 4, 5, 6, 2, 7], [20, 1, 21, 22, 23, 2], [1, 3, 4, 5, 6, 2, 7]]\n",
+      "tweet: aww  just will not got home from church he does not go today\n",
+      "tokens: ['aww', 'just', 'will', 'not', 'got', 'home', 'from', 'church', 'he', 'does', 'not', 'go', 'today']\n",
+      "tweet: you are not happy with the tables at all\n",
+      "tokens: ['you', 'are', 'not', 'happy', 'with', 'the', 'tables', 'at', 'all']\n",
+      "tweet: i ll never come back website at \n",
+      "tokens: ['i', 'll', 'never', 'come', 'back', 'website', 'at']\n",
+      "tweet: cannot happy with the service at all\n",
+      "tokens: ['can', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
+      "预处理后的数据: [['aww', 'just', 'will', 'not', 'get', 'home', 'from', 'church', 'he', 'do', 'not', 'go', 'today'], ['you', 'be', 'not', 'happy', 'with', 'the', 'table', 'at', 'all'], ['ll', 'never', 'come', 'back', 'website', 'at'], ['can', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']]\n",
+      "单词表: {'not': 1, 'at': 2, 'happy': 3, 'with': 4, 'the': 5, 'all': 6, 'aww': 7, 'just': 8, 'will': 9, 'get': 10, 'home': 11, 'from': 12, 'church': 13, 'he': 14, 'do': 15, 'go': 16, 'today': 17, 'you': 18, 'be': 19, 'table': 20, 'll': 21, 'never': 22, 'come': 23, 'back': 24, 'website': 25, 'can': 26, 'service': 27}\n",
+      "文本的单词索引序列: [[7, 8, 9, 1, 10, 11, 12, 13, 14, 15, 1, 16, 17], [18, 19, 1, 3, 4, 5, 20, 2, 6], [21, 22, 23, 24, 25, 2], [26, 1, 3, 4, 5, 27, 2, 6]]\n",
       "(4, 10)\n",
-      "填充后文本的单词索引序列: [[ 9 10 11 12 13 14 15  1 16 17]\n",
-      " [ 0 18 19  1  3  4  5  6  2  7]\n",
-      " [ 0  0  0  0 20  1 21 22 23  2]\n",
-      " [ 0  0  0  1  3  4  5  6  2  7]]\n"
+      "填充后文本的单词索引序列: [[ 1 10 11 12 13 14 15  1 16 17]\n",
+      " [ 0 18 19  1  3  4  5 20  2  6]\n",
+      " [ 0  0  0  0 21 22 23 24 25  2]\n",
+      " [ 0  0 26  1  3  4  5 27  2  6]]\n"
      ]
     }
    ],
-   "execution_count": 355
+   "execution_count": 577
   }
  ],
  "metadata": {
