fix: filtering stopword but remain negative words

--- a/Test-data-processing.ipynb
+++ b/Test-data-processing.ipynb
@@ -61,12 +61,12 @@
    "metadata": {
     "id": "YeuAheYyhdZw",
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.505319Z",
-     "start_time": "2025-03-23T09:25:34.500012Z"
+     "end_time": "2025-03-23T09:51:34.771806Z",
+     "start_time": "2025-03-23T09:51:34.763096Z"
     }
    },
    "outputs": [],
-   "execution_count": 571
+   "execution_count": 579
   },
   {
    "cell_type": "markdown",
@@ -84,8 +84,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.515618Z",
-     "start_time": "2025-03-23T09:25:34.511802Z"
+     "end_time": "2025-03-23T09:51:34.789012Z",
+     "start_time": "2025-03-23T09:51:34.782706Z"
     }
    },
    "outputs": [
@@ -106,13 +106,13 @@
      ]
     }
    ],
-   "execution_count": 572
+   "execution_count": 580
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.534196Z",
-     "start_time": "2025-03-23T09:25:34.530632Z"
+     "end_time": "2025-03-23T09:51:34.812572Z",
+     "start_time": "2025-03-23T09:51:34.808460Z"
     }
    },
    "cell_type": "code",
@@ -130,37 +130,7 @@
      ]
     }
    ],
-   "execution_count": 573
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.592607Z",
-     "start_time": "2025-03-23T09:25:34.588916Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "tweet = \"doesn't\"\n",
-    "tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
-    "tweet = re.sub(r\"(?<!n)t'\\b|'\", ' ', tweet)\n",
-    "print(tweet)\n",
-    "tweet = \"i'll\"\n",
-    "tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
-    "tweet = re.sub(r\"(?<!n)t'\\b|'\", ' ', tweet)\n",
-    "print(tweet)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "doesn t\n",
-      "i ll\n"
-     ]
-    }
-   ],
-   "execution_count": 574
+   "execution_count": 581
   },
   {
    "cell_type": "code",
@@ -192,6 +162,60 @@
     "        word = wordLemm.lemmatize(w)\n",
     "        finalwords.append(word)\n",
     "    return ' '.join(finalwords)\n",
+    "\n",
+    "def process_tweets_negation_del_stopword(tweet):\n",
+    "    # Lower Casing\n",
+    "    tweet = tweet.lower()\n",
+    "    #tweet=tweet[1:]\n",
+    "    # Removing all URls\n",
+    "    tweet = re.sub(urlPattern,'',tweet)\n",
+    "    # Removing all @username.\n",
+    "    tweet = re.sub(userPattern,'', tweet)\n",
+    "    # 移除非字母数字、空格和'的字符\n",
+    "    tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
+    "    # --- 特殊否定缩写处理 ---\n",
+    "    # 1. 明确处理 can't → cannot\n",
+    "    tweet = re.sub(r\"\\bcan't\\b\", \"cannot\", tweet)\n",
+    "    # 2. 处理 won't → will not\n",
+    "    tweet = re.sub(r\"\\bwon't\\b\", \"will not\", tweet)\n",
+    "    # 3. 处理 shan't → shall not\n",
+    "    tweet = re.sub(r\"\\bshan't\\b\", \"shall not\", tweet)\n",
+    "    # 4. 处理 ain't → is not\n",
+    "    tweet = re.sub(r\"\\bain't\\b\", \"is not\", tweet)\n",
+    "    # --- 通用n't处理 ---\n",
+    "    # 将剩余n't替换为 not（如didn't → did not）\n",
+    "    tweet = re.sub(r\"n't\\b\", \" not\", tweet)\n",
+    "    # --- 处理其他撇号为空格（如I'll → I ll）---\n",
+    "    tweet = re.sub(r\"'\", ' ', tweet)\n",
+    "    print(f\"tweet: {tweet}\")\n",
+    "    #tokenizing words\n",
+    "    tokens = word_tokenize(tweet)\n",
+    "    print(f\"before removing stopword tokens: {tokens}\")\n",
+    "\n",
+    "    # 移除非否定停用词\n",
+    "    negation_words = {\n",
+    "        # 基础否定词\n",
+    "        \"not\", \"no\", \"never\", \"nor\", \"none\", \"nobody\", \"nothing\",\n",
+    "        \"neither\", \"nowhere\", \"without\", \"cannot\"\n",
+    "        # 预处理后可能保留的否定词（如来自特殊缩写替换）\n",
+    "        # ,\"isn\", \"aren\", \"wasn\", \"weren\"\n",
+    "    }\n",
+    "    custom_stop_words = stopword.difference(negation_words)\n",
+    "    final_tokens = [w for w in tokens if w not in custom_stop_words]\n",
+    "    print(f\"after removing stopword tokens: {final_tokens}\")\n",
+    "\n",
+    "    #reducing a word to its word stem\n",
+    "    wordLemm = WordNetLemmatizer()\n",
+    "    finalwords=[]\n",
+    "\n",
+    "    for w in final_tokens:\n",
+    "        if len(w) > 1:\n",
+    "            # 动词词性还原（解决 does→doe 问题）\n",
+    "            word = wordLemm.lemmatize(w, pos='v')\n",
+    "            # 名词词性还原（根据任务需求）\n",
+    "            word = wordLemm.lemmatize(word, pos='n')\n",
+    "            finalwords.append(word)\n",
+    "    return finalwords\n",
     "\n",
     "def process_tweets_negation_append_fix(tweet):\n",
     "    # Lower Casing\n",
@@ -336,12 +360,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.648435Z",
-     "start_time": "2025-03-23T09:25:34.635574Z"
+     "end_time": "2025-03-23T09:51:34.875530Z",
+     "start_time": "2025-03-23T09:51:34.856609Z"
     }
    },
    "outputs": [],
-   "execution_count": 575
+   "execution_count": 582
   },
   {
    "cell_type": "code",
@@ -361,12 +385,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.676647Z",
-     "start_time": "2025-03-23T09:25:34.673348Z"
+     "end_time": "2025-03-23T09:51:34.887979Z",
+     "start_time": "2025-03-23T09:51:34.885020Z"
     }
    },
    "outputs": [],
-   "execution_count": 576
+   "execution_count": 583
   },
   {
    "cell_type": "code",
@@ -376,18 +400,18 @@
     "test_tweets = [\n",
     "    \"Aww... @Wowena just won't got home from church??? He doesn't go today\",\n",
     "    \"You aren't happy with the tables at all\",\n",
-    "    \"i'll never come back! website at https://www.example.com\",\n",
-    "    \"can't happy with the service at all.\"\n",
+    "    \"i'll mightn't come back! website at https://www.example.com\",\n",
+    "    \"They ain't happy with the service at all.\"\n",
     "]\n",
     "\n",
-    "processed_test_text = [process_tweets_negation_append_fix(x) for x in test_tweets]\n",
+    "processed_test_text = [process_tweets_negation_del_stopword(x) for x in test_tweets]\n",
     "print(\"预处理后的数据:\", processed_test_text)\n",
     "tokenizer(max_words, processed_test_text)"
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:25:34.705372Z",
-     "start_time": "2025-03-23T09:25:34.701108Z"
+     "end_time": "2025-03-23T09:51:34.907177Z",
+     "start_time": "2025-03-23T09:51:34.901367Z"
     }
    },
    "outputs": [
@@ -396,25 +420,29 @@
      "output_type": "stream",
      "text": [
       "tweet: aww  just will not got home from church he does not go today\n",
-      "tokens: ['aww', 'just', 'will', 'not', 'got', 'home', 'from', 'church', 'he', 'does', 'not', 'go', 'today']\n",
+      "before removing stopword tokens: ['aww', 'just', 'will', 'not', 'got', 'home', 'from', 'church', 'he', 'does', 'not', 'go', 'today']\n",
+      "after removing stopword tokens: ['aww', 'not', 'got', 'home', 'church', 'not', 'go', 'today']\n",
       "tweet: you are not happy with the tables at all\n",
-      "tokens: ['you', 'are', 'not', 'happy', 'with', 'the', 'tables', 'at', 'all']\n",
-      "tweet: i ll never come back website at \n",
-      "tokens: ['i', 'll', 'never', 'come', 'back', 'website', 'at']\n",
-      "tweet: cannot happy with the service at all\n",
-      "tokens: ['can', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
-      "预处理后的数据: [['aww', 'just', 'will', 'not', 'get', 'home', 'from', 'church', 'he', 'do', 'not', 'go', 'today'], ['you', 'be', 'not', 'happy', 'with', 'the', 'table', 'at', 'all'], ['ll', 'never', 'come', 'back', 'website', 'at'], ['can', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']]\n",
-      "单词表: {'not': 1, 'at': 2, 'happy': 3, 'with': 4, 'the': 5, 'all': 6, 'aww': 7, 'just': 8, 'will': 9, 'get': 10, 'home': 11, 'from': 12, 'church': 13, 'he': 14, 'do': 15, 'go': 16, 'today': 17, 'you': 18, 'be': 19, 'table': 20, 'll': 21, 'never': 22, 'come': 23, 'back': 24, 'website': 25, 'can': 26, 'service': 27}\n",
-      "文本的单词索引序列: [[7, 8, 9, 1, 10, 11, 12, 13, 14, 15, 1, 16, 17], [18, 19, 1, 3, 4, 5, 20, 2, 6], [21, 22, 23, 24, 25, 2], [26, 1, 3, 4, 5, 27, 2, 6]]\n",
+      "before removing stopword tokens: ['you', 'are', 'not', 'happy', 'with', 'the', 'tables', 'at', 'all']\n",
+      "after removing stopword tokens: ['not', 'happy', 'tables']\n",
+      "tweet: i ll might not come back website at \n",
+      "before removing stopword tokens: ['i', 'll', 'might', 'not', 'come', 'back', 'website', 'at']\n",
+      "after removing stopword tokens: ['might', 'not', 'come', 'back', 'website']\n",
+      "tweet: they is not happy with the service at all\n",
+      "before removing stopword tokens: ['they', 'is', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
+      "after removing stopword tokens: ['not', 'happy', 'service']\n",
+      "预处理后的数据: [['aww', 'not', 'get', 'home', 'church', 'not', 'go', 'today'], ['not', 'happy', 'table'], ['might', 'not', 'come', 'back', 'website'], ['not', 'happy', 'service']]\n",
+      "单词表: {'not': 1, 'happy': 2, 'aww': 3, 'get': 4, 'home': 5, 'church': 6, 'go': 7, 'today': 8, 'table': 9, 'might': 10, 'come': 11, 'back': 12, 'website': 13, 'service': 14}\n",
+      "文本的单词索引序列: [[3, 1, 4, 5, 6, 1, 7, 8], [1, 2, 9], [10, 1, 11, 12, 13], [1, 2, 14]]\n",
       "(4, 10)\n",
-      "填充后文本的单词索引序列: [[ 1 10 11 12 13 14 15  1 16 17]\n",
-      " [ 0 18 19  1  3  4  5 20  2  6]\n",
-      " [ 0  0  0  0 21 22 23 24 25  2]\n",
-      " [ 0  0 26  1  3  4  5 27  2  6]]\n"
+      "填充后文本的单词索引序列: [[ 0  0  3  1  4  5  6  1  7  8]\n",
+      " [ 0  0  0  0  0  0  0  1  2  9]\n",
+      " [ 0  0  0  0  0 10  1 11 12 13]\n",
+      " [ 0  0  0  0  0  0  0  1  2 14]]\n"
      ]
     }
    ],
-   "execution_count": 577
+   "execution_count": 584
   }
  ],
  "metadata": {
